style: 恢复element plus的主色调变量注释

--- a/.vitepress/theme/styles/custom.css
+++ b/.vitepress/theme/styles/custom.css
@@ -8,7 +8,7 @@
   --vp-button-brand-hover-bg: #ff2e43;
 
   /* element plus */
-  /* --el-color-primary: #e70217; */
+  --el-color-primary: #e70217;
 }
 
 .group:has([role='button']) .VPSidebarItem.level-0 h2.text {
