--- a/.vitepress/theme/styles/custom.css
+++ b/.vitepress/theme/styles/custom.css
@@ -2,6 +2,14 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #ffa641, #e70217);
 
+  /* --vp-home-hero-image-background-image: radial-gradient(
+    circle at center,
+    #fff 30%,
+    #ffa641 60%,
+    #e70217 100%
+  );
+  --vp-home-hero-image-filter: blur(50px); */
+
   --vp-c-primary: #e70217;
   --vp-c-brand-1: #e70217;
   --vp-button-brand-bg: #e70217;
